--- a/first.html
+++ b/first.html
@@ -14,6 +14,7 @@
         <u1>
             <li>{{house[0]}}</li>
             <li>{{house[1]}}</li>
+            <li>{{house[2]}}</li>
         </u1>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
